add section delete div

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         </section>
 	</main>
 	<footer>
-        <div class="contact">
-            <h4>CONTACT ME</h4>
+        <section class="contact">
+            <h4>
+                CONTACT ME
+            </h4>
             <a class="mail" href="mailto:ncis@hotmail.de">Send</a>
-        </div>
+        </section>
         <p>© Babera Design</p>
     </footer>
 </body>
