img renamed title rename

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="LandigPage" content="Artis Webseite und Informationen">
 	<link rel="stylesheet" href="assets/css/style.css">
-    <title>LandingPage</title>
+    <title>Home</title>
 </head>
 <body>
     <header>
@@ -32,19 +32,19 @@
             <table class="table1">
                 <tr>
                     <td><h2>Panamerican School of Art - Design of Photography - 2005.</h2></td>
-                    <td><img src="assets/img/Screenshot_6.png" alt=""></td>
+                    <td><img src="assets/img/b1.png" alt=""></td>
                 </tr>
             </table>
             <table class="table2">
                 <tr>
                     <td><h2>Getulio Vargas Foundation Business School - MBA - 2003.</h2></td>
-                    <td><img src="assets/img/Screenshot_1.png" alt=""></td>
+                    <td><img src="assets/img/b2.png" alt=""></td>
                 </tr>
             </table>
             <table class="table3">
                 <tr>
                     <td><h2>São Paulo University - Biochemistry Institute - MS in Biotechnology - 1995</h2></td>
-                    <td><img src="assets/img/Screenshot_3.png" alt=""></td>
+                    <td><img src="assets/img/b3.png" alt=""></td>
                 </tr>
             </table>
         </section>
