Html Update and Css Update

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
+        <!-- ClAUDIO MORTENSEN STUDIO  --> 
         <h1>
             ClAUDIO MORTENSEN STUDIO
         </h1>
-        <p class="secondUnderline">
+        <p class="secondHeadline">
             Photographie Artist & Designer
         </p>
     </header>
 	<main>
+        <!-- About Artilce -->
         <section>
             <h2>
                 ABOUT
@@ -28,34 +30,60 @@
             </p>
         </section>
         <section>
+            <!-- Panamerica Shool || Picture --> 
             <table class="table1">
                 <tr>
-                    <td><h2>Panamerican School of Art - Design of Photography - 2005.</h2></td>
-                    <td><img src="assets/img/b1.png" alt=""></td>
+                    <td>
+                        <h2>
+                            Panamerican School of Art - Design of Photography - 2005.
+                        </h2>
+                    </td>
+                    <td>
+                        <img src="assets/img/b1.png" alt="">
+                    </td>
                 </tr>
             </table>
+            <!-- Getulio Vargas || Picture -->
             <table class="table2">
                 <tr>
-                    <td><h2>Getulio Vargas Foundation Business School - MBA - 2003.</h2></td>
-                    <td><img src="assets/img/b2.png" alt=""></td>
+                    <td>
+                        <h2>
+                            Getulio Vargas Foundation Business School - MBA - 2003.
+                        </h2>
+                    </td>
+                    <td>
+                        <img src="assets/img/b2.png" alt="">
+                    </td>
                 </tr>
             </table>
+            <!--  Sao Paulo || Picture -->
             <table class="table3">
                 <tr>
-                    <td><h2>São Paulo University - Biochemistry Institute - MS in Biotechnology - 1995</h2></td>
-                    <td><img src="assets/img/b3.png" alt=""></td>
+                    <td>
+                        <h2>
+                            São Paulo University - Biochemistry Institute - MS in Biotechnology - 1995
+                        </h2>
+                    </td>
+                    <td>
+                        <img src="assets/img/b3.png" alt="">
+                    </td>
                 </tr>
             </table>
         </section>
 	</main>
 	<footer>
+        <!-- Contact ME Section  --> 
+        <!-- Mail Section > Button --> 
         <section class="contact">
             <p>
                 CONTACT ME
             </p>
             <a class="mail" href="mailto:ncis@hotmail.de">Send</a>
         </section>
-        <p>© Babera Design</p>
+        <!--  © Markus Metzger  --> 
+        <p>
+            © Markus Metzger
+        </p>
     </footer>
 </body>
 </html>
